--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Arecrui.GitHub.io by ArecRui</title>
+    <title>Arecrui.GitHub.io by Arec, Zerui liang</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Arecrui.GitHub.io</h1>
+        <h1>Arecrui</h1>
         <p>This is a personal website of Mr. Liang Zerui. This website is designed to collect all the learning notes.</p>
       </header>
 
