Taste on github website

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
       <section>
         <h1>
-<a id="arecruigithubio" class="anchor" href="#arecruigithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ArecRui.github.io</h1>
+<a id="arecruigithubio" class="anchor" href="#arecruigithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ArecRui</h1>
 
 <p>This is a personal website of Mr. Liang Zerui. This website is designed to collect all the learning notes.</p>
       </section>
