--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>Arec_Rui</h1>
+								<p>This is a personal website of Mr. Liang Zerui. This website is designed to collect all the learning notes.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
