--- a/_portfolio/index.html
+++ b/_portfolio/index.html
@@ -3,11 +3,8 @@ title: "Portfolio"
 layout: splash
 excerpt: "This is a test page of portfolio."
 sitemap: false
-permalink: /portfolio
+permalink: 
 
 ---
 
 This is a test page of portfolio.
-header:
-  image: 1111.jpg
-  
