--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@ sitemap: false
 permalink: 
 
 header:
-  image: 1111.jpg
+  image: RGB.jpg
   caption: "Photo credit: [**ArecRui**]()"
   cta_label: "More Info"
   cta_url: "https://unsplash.com"
