--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 ---
-
-title: "Portfolio"
-layout: splash
-excerpt: "This is a test page."
-sitemap: false
-permalink: 
-
+layout: archive
+author_profile: true
 header:
-  image: RGB.jpg
+  image: header.jpg
   caption: "Photo credit: [**ArecRui**]()"
   cta_label: "More Info"
   cta_url: "https://unsplash.com"
   
+
 ---
 
 {% include base_path %}
-{% include feature_row id="intro" type="center" %}
 
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts }}</h3>
 
-<div class="grid__wrapper">
-  {% for post in site.portfolio %}
-    {% include archive-single.html type="grid" %}
-  {% endfor %}
-</div>
+{% for post in paginator.posts %}
+  {% include archive-single.html %}
+{% endfor %}
 
-This is a test page of portfolio。
+{% include paginator.html %}
