--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 ---
 layout: archive
 author_profile: true
+excerpt: "This post should display a **header with an overlay image**, if the theme supports it."
 header:
-  image: header.jpg
+  overlay_image: header3.jpg
+  overlay_filter: 0.4
   caption: "Photo credit: [**ArecRui**]()"
   cta_label: "More Info"
-  cta_url: "https://unsplash.com"
-  
+  cta_url: ""
 
 ---
 
