--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
 author_profile: true
-excerpt: "This post should display a **header with an overlay image**, if the theme supports it."
+excerpt: "This is Liang Zerui's personal website. This site is designed to collect and store the author's learning notes and articles."
 header:
   overlay_image: header3.jpg
   overlay_filter: 0.2
   caption: "Photo credit: [**ArecRui**]()"
-  cta_label: "More Info"
+  cta_label: "About the author"
   cta_url: ""
 
 ---
