--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,8 @@
 ---
 
-title: "Home Page"
+title: "Portfolio"
 layout: splash
-excerpt: "This is a test page."
+excerpt: "Projects proudly presented by Mr. Liang Zerui."
 sitemap: false
 permalink: 
 
@@ -11,21 +11,24 @@ header:
   overlay_filter: 0.4
   caption: "Photo credit: [**ArecRui**]()"
   cta_label: "More Info"
-  cta_url: "https://unsplash.com"
+  cta_url: ""
   
 gallery1:
   - url: 1.jpg
     image_path: 1.jpg
     alt: "placeholder image 1"
     title: "Image 1 title caption"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
   - url: 2.jpg
     image_path: 2.jpg
     alt: "placeholder image 2"
     title: "Image 2 title caption"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
   - url: 3.jpg
     image_path: 3.jpg
     alt: "placeholder image 3"
     title: "Image 3 title caption"  
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
     
 ---
 
