--- a/portfolio.html
+++ b/portfolio.html
@@ -18,16 +18,25 @@ gallery1:
     image_path: 1.jpg
     alt: "placeholder image 1"
     title: "Image 1 title caption"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
   - url: 2.jpg
     image_path: 2.jpg
     alt: "placeholder image 2"
     title: "Image 2 title caption"
+    
+feature_row:
+  - image_path: 1.jpg
+    alt: "placeholder image 1"
+    title: "Placeholder 1"
     excerpt: "This is some sample content that goes here with **Markdown** formatting."
-  - url: 3.jpg
-    image_path: 3.jpg
-    alt: "placeholder image 3"
-    title: "Image 3 title caption"  
+  - image_path: 2.jpg
+    alt: "placeholder image 2"
+    title: "Placeholder 2"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--inverse"
+  - image_path: 3.jpg
+    title: "Placeholder 3"
     excerpt: "This is some sample content that goes here with **Markdown** formatting."
     
 ---
@@ -37,3 +46,4 @@ gallery1:
 This is a test page of portfolio。
 
 {% include gallery id="gallery1" caption="This is a sample gallery with **Markdown support**." %}
+{% include feature_row %}
