--- a/portfolio.html
+++ b/portfolio.html
@@ -27,14 +27,11 @@ feature_row:
   - image_path: 1.jpg
     alt: "placeholder image 1"
     title: "Placeholder 1"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    excerpt: "[This is some sample content that goes here with **Markdown** formatting.](www.baidu.com)"
   - image_path: 2.jpg
     alt: "placeholder image 2"
     title: "Placeholder 2"
     excerpt: "This is some sample content that goes here with **Markdown** formatting."
-    url: "#test-link"
-    btn_label: "Read More"
-    btn_class: "btn--inverse"
   - image_path: 3.jpg
     title: "Placeholder 3"
     excerpt: "This is some sample content that goes here with **Markdown** formatting."
