--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,8 @@ header:
   cta_label: "More Info"
   cta_url: ""
   
+sidebar:
+  nav: "foo1"
 ---
 
-{% include archive-single.html%}
+{% include sidebar.html %}
