--- a/_docs/Liang Zerui Resume.htm
+++ b/_docs/Liang Zerui Resume.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta name=±êÌâ content="BRIAN B">
-<meta name=¹Ø¼ü´Ê content="">
+<meta name=ï¿½ï¿½ï¿½ï¿½ content="BRIAN B">
+<meta name=ï¿½Ø¼ï¿½ï¿½ï¿½ content="">
 <meta http-equiv=Content-Type content="text/html; charset=x-mac-chinesesimp">
 <meta name=Generator content="Microsoft Word 14 (filtered)">
 <title>BRIAN B</title>
@@ -16,13 +16,13 @@
 	{font-family:Wingdings;
 	panose-1:5 0 0 0 0 0 0 0 0 0;}
 @font-face
-	{font-family:ËÎÌå;
+	{font-family:ï¿½ï¿½ï¿½ï¿½;
 	panose-1:2 1 6 0 3 1 1 1 1 1;}
 @font-face
-	{font-family:ËÎÌå;
+	{font-family:ï¿½ï¿½ï¿½ï¿½;
 	panose-1:2 1 6 0 3 1 1 1 1 1;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@ï¿½ï¿½ï¿½ï¿½";
 	panose-1:2 1 6 0 3 1 1 1 1 1;}
 @font-face
 	{font-family:Garamond;
@@ -547,7 +547,7 @@ style='font-size:10.0pt;font-family:"Times New Roman";letter-spacing:0pt'>&nbsp;
   lang=EN-US style='font-family:"Times New Roman"'>Third Person Shooter Game <i>Nightmare</i></span></b></p>
   <p class=MsoNormal align=left style='margin-left:15.4pt;text-align:left;
   layout-grid-mode:char'><i><span lang=EN-US style='font-family:"Times New Roman"'>Re-producer
-  (Produced based on Dr. Jeffery¡¯s work)</span></i></p>
+  (Produced based on Dr. Jefferyï¿½ï¿½s work)</span></i></p>
   <p class=MsoNormal align=left style='text-align:left;layout-grid-mode:char'><b><span
   lang=EN-US style='font-family:"Times New Roman"'>Movie <i>Onion Girl</i></span></b></p>
   <p class=MsoNormal align=left style='margin-left:15.4pt;text-align:left;
