--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 author_profile: true
-excerpt: "This is Liang Zerui's personal website. This site is designed to collect and store the author's learning notes and articles."
+excerpt: "This is Liang Zerui's personal website. This site is designed to collect and store the author's research articles, learning notes and projects."
 header:
   overlay_image: header3.jpg
   overlay_filter: 0.2
